ulogd2 (2.0.3-2) UNRELEASED; urgency=low

  * Enable parallel build.
  * Enable GPG signature checking for uscan:
    - update debian/watch
    - add debian/upstream-signing-key.pgp
    - list the keyring file in debian/source/include-binaries
  * Use dh-autoreconf instead of autotools-dev to fix FTBFS on newer
    architectures (e.g. arm64 and Ubuntu's ppc64el). (Closes: #735961)

 -- Chris Boot <debian@bootc.net>  Sun, 08 Dec 2013 11:52:08 +0000

ulogd2 (2.0.3-1) unstable; urgency=low

  * New upstream release.
  * Refresh put-logfiles-in-var-log-ulog.patch.
  * Remove patches applied upstream:
    - nice-before-setuid.patch
    - write-pidfile.patch
    - improve-pid-file-handling.patch
    - nflog-close-handle-after-unbind.patch
  * Use ./configure --disable-silent-rules instead of make V=1.
  * Correct Vcs-Browser entry to point at gitweb on Alioth.
  * If the old ulogd init script exists during preinst, try to stop ulogd using
    that script. (Closes: #731257)

 -- Chris Boot <debian@bootc.net>  Tue, 03 Dec 2013 22:50:05 +0000

ulogd2 (2.0.2-4) unstable; urgency=low

  * Change priority of transitional packages to extra.
  * Change Vcs-{Browser,Git} to Alioth.
  * Update paths to docs in ulogd(8). (LP: #1232104)
  * Disable and remove old ulogd init script. (Closes: #729657, LP: #1250520)
    - Forcibly disable the init script in postinst.
    - Remove the script safely using rm_conffile.
    - Make the ulogd2 init script provide ulogd.
  * Fix assertion failure in libnfnetlink caused by running multiple instances
    of ulogd. (Closes: #729055)
    - Add nflog-close-handle-after-unbind.patch.
  * Add systemd unit and upstart job files.
  * Update Standards-Version to 3.9.5 (no changes required).

 -- Chris Boot <debian@bootc.net>  Fri, 15 Nov 2013 16:36:17 +0000

ulogd2 (2.0.2-3) unstable; urgency=low

  * Set up transition from ulogd to ulogd2. (Closes: #395302, #699767)
  * Update debian/ulogd2.examples to use a wildcard for debian/examples/*