@@ -10,6 +10,8 @@ export DH_OPTIONS
 # Activate full hardening build flags
 export DEB_BUILD_MAINT_OPTIONS := hardening=+pie,+bindnow
 
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
 PACKAGE	= $(firstword $(shell dh_listpackages))
 TMP	= $(CURDIR)/debian/$(PACKAGE)
 
@@ -17,7 +19,8 @@ TMP	= $(CURDIR)/debian/$(PACKAGE)
 	dh $@ --with autoreconf,systemd --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -- --disable-silent-rules --with-pgsql --with-mysql --with-dbi
+	dh_auto_configure -- --disable-silent-rules --with-pgsql --with-mysql \
+		             --with-dbi --with-dbi-lib=/usr/lib/$(DEB_HOST_MULTIARCH)
 
 override_dh_auto_build:
 	dh_auto_build
