@@ -7,6 +7,9 @@ ulogd2 (2.0.3-2) UNRELEASED; urgency=low
     - list the keyring file in debian/source/include-binaries
   * Use dh-autoreconf instead of autotools-dev to fix FTBFS on newer
     architectures (e.g. arm64 and Ubuntu's ppc64el). (Closes: #735961)
+  * Add --with-dbi-lib to configure options to work with newer libdbi which now
+    lives in the multiarch lib directory. Thanks to Hideki Yamane for the patch.
+    (Closes: #738407)
 
  -- Chris Boot <debian@bootc.net>  Sun, 08 Dec 2013 11:52:08 +0000
 
